media/sonarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8989
  selector:
    app: sonarr
